--- a/index.html
+++ b/index.html
@@ -1487,11 +1487,11 @@
       <div class="wrap">
         <div class="section-title">
           <div>
-            <h2>Texas resources that help families plan (non-competitive links)</h2>
+            <h2>Texas resources that help families plan</h2>
             <p>
               Good decisions get easier when families know where to find support.
               Below are helpful Texas resources for older adults, caregivers, and long term services navigation.
-              These are public resources, not product competitors.
+              These are public resources that may help.
             </p>
           </div>
         </div>
